# Wallet-Group-Exercise

./: CMakeLists.txt  README.md  main.cpp  tutorial.cxx
Project/: main1.cpp
data/: coin_exchange.json  exchange_transactions.json  transactions.json  users.json  wallets.json
defined/: constant.cpp  constant.h
helper/: HashHelper.cpp  HashHelper.h  Helper.cpp  Helper.h  OTPHelper.cpp  OTPHelper.h
helper/File/: JsonFileManager.cpp  JsonFileManager.h
include/common/: types.h
include/interface/: auth_service.h  data_service.h  service_manager.h  user_service.h
include/services/: auth_service.cpp  data_service.cpp  service_manager.cpp  user_service.cpp
interface/: UserService.h  WalletService.h
models/: CoinExchange.cpp  CoinExchange.h  ExchangeTransaction.cpp  ExchangeTransaction.h  Transaction.cpp  Transaction.h  User.cpp  User.h  Wallet.cpp  Wallet.h
modules/Math/: mathLib.cpp  mathLib.h
screen/: adminScreen.cpp  adminScreen.h  userScreen.cpp  userScreen.h  walletScreen.cpp  walletScreen.h
services/: UserService.cpp  WalletService.cpp
